--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 			</div>
 			<ul class="product__list">
 				<li class="product__item">
-					<div class="product__pic"></div>
-					<div class="product__title">Колодки тормозные комплект (задние) оригинал</div>
+					<div class="product__pic" style="background-image: url(img/kolotki.png);"></div>
+					<h2 class="product__title">Колодки тормозные комплект (задние) оригинал</h2>
 					<div class="product__car-model">Toyota corolla седан XI 2013 - наст. время</div>
 					<div class="product__price">2310 Р.</div>
 					<a href="#" class="product__button">Заказать</a>
